--- a/stylepro.css
+++ b/stylepro.css
@@ -299,6 +299,53 @@ li.slick-active button {
 }
 
 
+section.contato {
+    padding: 40px 0;
+    text-align: center;
+}
+
+section.contato h1 {
+    font-size: 50px;
+
+}
+
+section.contato form {
+    width: 100%;
+}
+
+.contato input[type=text],
+.contato input[type=email]{
+    width:100%;
+    height: 50px;
+    margin: 20px 0;
+    border-radius: 10px;
+    background: #FCFDFF;
+    border: 1px solid #C3CCE8;
+    padding-left:10px ;
+}
+
+.contato textarea {
+    width:100%;
+    height: 50px;
+    margin: 20px 0;
+    border-radius: 10px;
+    background: #FCFDFF;
+    border: 1px solid #C3CCE8;
+    padding-left:10px ;
+    resize: vertical;
+}
+
+.contato input[type=submit]{
+    width: 100%;
+    height: 50px;
+    display: block;
+    cursor: pointer;
+    border: 0;
+    background: #255AFF;
+    color:white ;
+    font-size: 18px ;
+   
+}
 
 @media screen and (max-width:768px) {
 
